[gd_scene load_steps=13 format=3 uid="uid://wqwnkfhniclu"]

[ext_resource type="Script" uid="uid://dqvpbf71jeec0" path="res://commons/context/walkgrids/TopologyManager.gd" id="1_v503f"]
[ext_resource type="Script" uid="uid://dm5m5m8v1s2qq" path="res://commons/context/walkgrids/SineSpace.gd" id="2_v503f"]
[ext_resource type="Script" uid="uid://ds5k3srpps23h" path="res://commons/context/walkgrids/NoiseSpace.gd" id="3_ey0dh"]
[ext_resource type="Shader" uid="uid://4hursyjcj1tb" path="res://commons/resourses/shaders/Grid.gdshader" id="3_v503f"]
[ext_resource type="Script" uid="uid://dm4wj8rar6mwn" path="res://commons/context/walkgrids/VoronoiSpace.gd" id="4_cm8s1"]
[ext_resource type="Script" uid="uid://di8nmks4jyq0c" path="res://commons/context/walkgrids/RandomSpace.gd" id="5_gmykt"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_ey0dh"]
render_priority = 0
shader = ExtResource("3_v503f")
shader_parameter/modelColor = Color(0.5, 0.5, 0.5, 1)
shader_parameter/wireframeColor = Color(1, 0, 0, 1)
shader_parameter/emissionColor = Color(1, 0, 0, 1)
shader_parameter/width = 1.0
shader_parameter/blur = 1.0
shader_parameter/emission_strength = 2.0
shader_parameter/modelOpacity = 1.0

[sub_resource type="ConvexPolygonShape3D" id="ConvexPolygonShape3D_73o5n"]

[sub_resource type="ConvexPolygonShape3D" id="ConvexPolygonShape3D_d1xnd"]

[sub_resource type="ConvexPolygonShape3D" id="ConvexPolygonShape3D_y0xe5"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_cm8s1"]
render_priority = 0
shader = ExtResource("3_v503f")
shader_parameter/modelColor = Color(0.5, 0.5, 0.5, 1)
shader_parameter/wireframeColor = Color(1, 0, 0, 1)
shader_parameter/emissionColor = Color(1, 0, 0, 1)
shader_parameter/width = 1.0
shader_parameter/blur = 1.0
shader_parameter/emission_strength = 2.0
shader_parameter/modelOpacity = 1.0

[sub_resource type="ConvexPolygonShape3D" id="ConvexPolygonShape3D_krqlj"]

[node name="TopologyManager" type="Node3D"]
script = ExtResource("1_v503f")

[node name="SineSpace" type="StaticBody3D" parent="."]
script = ExtResource("2_v503f")

[node name="MeshInstance3D" type="MeshInstance3D" parent="SineSpace"]
material_override = SubResource("ShaderMaterial_ey0dh")

[node name="CollisionShape3D" type="CollisionShape3D" parent="SineSpace"]
shape = SubResource("ConvexPolygonShape3D_73o5n")

[node name="NoiseSpace" type="StaticBody3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 30, 0, 0)
script = ExtResource("3_ey0dh")

[node name="MeshInstance3D" type="MeshInstance3D" parent="NoiseSpace"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="NoiseSpace"]
shape = SubResource("ConvexPolygonShape3D_d1xnd")

[node name="VoronoiSpace" type="StaticBody3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 60, 0, 0)
script = ExtResource("4_cm8s1")

[node name="MeshInstance3D" type="MeshInstance3D" parent="VoronoiSpace"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="VoronoiSpace"]
shape = SubResource("ConvexPolygonShape3D_y0xe5")

[node name="RandomSpace" type="StaticBody3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 90, 0, 0)
script = ExtResource("5_gmykt")

[node name="MeshInstance3D" type="MeshInstance3D" parent="RandomSpace"]
material_override = SubResource("ShaderMaterial_cm8s1")

[node name="CollisionShape3D" type="CollisionShape3D" parent="RandomSpace"]
shape = SubResource("ConvexPolygonShape3D_krqlj")

[node name="Camera3D" type="Camera3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.917845, 0.39694, 0, -0.39694, 0.917845, 0, 3.6822, 4.89218)

[node name="OmniLight3D" type="OmniLight3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 4.11527, 0)
